Bug #7800 SHOW VARIABLES does not show slave-related configuration
Submitted: 11 Jan 2005 14:23 Modified: 18 May 2005 3:50
Reporter: Kate Turner
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.0.20 OS:Linux (Linux x86-64)
Assigned to: Jim Winstead Target Version:

[11 Jan 2005 14:23] Kate Turner
Description:
'SHOW VARIABLES' does not show slave-related variables such as "slave-skip-errors". 

How to repeat:
1. Execute SHOW VARIABLES LIKE '%slave%' 
2. Observe that slave-skip-errors is not shown. 

Suggested fix:
Show slave-related variables in SHOW VARIABLES.
[12 Feb 2005 6:16] Jim Winstead
The patch adds slave_compressed_protocol, slave_load_tmpdir, and slave_skip_errors to
'SHOW VARIABLES', which appear to be the three that were overlooked.

The patch is for 4.0, although it is unlikely to be pushed there. It is a more likely
candidate for MySQL 5.0.
[26 Apr 2005 0:56] Jim Winstead
The patch can be found at http://lists.mysql.com/internals/21825
[7 May 2005 12:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24660
[17 May 2005 0:58] Jim Winstead
Added for 5.0.6.
[18 May 2005 3:50] Paul DuBois
Noted in 5.0.6 changelog.