Add support for slave_compressed_protocol, slave_load_tmpdir, and slave_skip_errors in SHOW VARIABLES. (Bug #7800)